--- a/.github/workflows/deploy-docusaurus.yml
+++ b/.github/workflows/deploy-docusaurus.yml
@@ -24,5 +24,5 @@ jobs:
         run: |
           docker run \
           -e app代碼 -e API_金鑰 \
-          -e CONFIG="$(cat ..json)" \
+          -e CONFIG="$(cat config.json)" \
           algolia/docsearch-scraper
