--- a/.github/workflows/deploy-docusaurus.yml
+++ b/.github/workflows/deploy-docusaurus.yml
@@ -18,11 +18,8 @@ jobs:
           cache: yarn
 
       - name: docsearch抓取
-        env:
-          ALGOLIA_APP_ID: "70GEOCJCSX"
-          ALGOLIA_API_KEY: "b8504bd49b99826b1f7f7ccb8d9dadc8"
         run: |
           docker run \
-          -e ALGOLIA_APP_ID -e ALGOLIA_API_KEY \
+          -e --env-file=.env  \
           -e CONFIG="$(cat config.json)" \
           algolia/docsearch-scraper
